--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,18 @@ node_js:
 cache: npm
 branches:
   only:
-    - master # build master branch only
+    - develop # build master branch only
 script:
+  - hexo clean
   - hexo generate # generate static files
-deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GH_TOKEN
-  keep-history: true
-  on:
-    branch: master
-  local-dir: public
+after_script:
+  - cd ./public
+  - git init
+  - git config user.name "pysnow530"
+  - git config user.email "pysnow530@163.com"
+  - git add .
+  - git commit -m "Travis CI Auto Builder"
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" develop:master # GH_TOKEN是在Travis中配置token的名称
+env:
+  global:
+    - GH_REF: github.com/pysnow530/pysnow530.github.io.git
