--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ after_script:
   - git config user.email "pysnow530@163.com"
   - git add .
   - git commit -m "Travis CI Auto Builder"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" develop:master # GH_TOKEN是在Travis中配置token的名称
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master # GH_TOKEN是在Travis中配置token的名称
 env:
   global:
     - GH_REF: github.com/pysnow530/pysnow530.github.io.git
